# libfastset

./: .gitignore  ChangeLog  Makefile  Makefile.am  NEWS  README  configure.ac  configure.scan  fastset.c  fastset.h  pre-tidy.diff  test-fastset.c
src/: fastset.c  fastset.h
tests/: test-fastset.c  test-fastset.h  test_fastset_add_size_contains.c  test_fastset_clear.c  test_fastset_clone.c  test_fastset_create.c  test_fastset_disjoint.c  test_fastset_equal.c  test_fastset_foreach.c  test_fastset_intersect.c  test_fastset_minus.c  test_fastset_remove.c  test_fastset_subset_superset.c  test_fastset_union.c  test_fastset_unique.c
